E2E flow for User API complete
